New label and download button

--- a/angular.json
+++ b/angular.json
@@ -62,7 +62,7 @@
               }
             ],
             "scripts": [],
-            "baseHref": "/"
+            "baseHref": "/ui-pub/"
           },
           "configurations": {
             "development": {
