--- a/src/assets/i18n/es.json5
+++ b/src/assets/i18n/es.json5
@@ -3583,7 +3583,7 @@
   "item.page.edit": "Editar este ítem",
 
   // "item.page.files": "Files",
-  "item.page.files": "Archivos",
+  "item.page.files": "Descargas",
 
   // "item.page.filesection.description": "Description:",
   "item.page.filesection.description": "Descripción:",
