--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -2388,7 +2388,7 @@
 
   "item.page.edit": "Edit this item",
 
-  "item.page.files": "Files",
+  "item.page.files": "Downloads",
 
   "item.page.filesection.description": "Description:",
 
