Add filter to full metadata page

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -5289,5 +5289,24 @@
   "relationships.isTranslatorOf.Person":"Translator (Person)",
   "dc.contributor.writer":"Writer",
   "dc.contributor.translator":"Translator",
+  "dc.creator":"Author",
+  "dc.description":"Description",
+  "dc.identifier.doi":"DOI",
+  "dc.identifier.uri":"URI",
+  "dc.language":"Language",
+  "dc.rights":"Access Rights",
+  "dc.subject.agrovoc":"AGROVOC",
+  "dc.coverage.countryfocus":"Country",
+  "dc.date.issued":"Date Issued",
+  "dc.publisher":"Publisher",
+  "dc.source.art":"Article number",
+  "dc.source.issn":"ISSN",
+  "dc.source.journal":"Journal",
+  "dc.source.volume":"Journal Volume",
+  "dc.type":"Type",
+  "dc.coverage.place":"Place of Publication",
+  "dc.subject.keywords":"Keyword",
+  "dc.relation.dataset":"Relation Dataset",
+  "":"",
   "":""
 }
