--- a/src/assets/i18n/es.json5
+++ b/src/assets/i18n/es.json5
@@ -7898,5 +7898,24 @@
   "relationships.isTranslatorOf.Person":"Traductor (Persona)",
   "dc.contributor.writer":"Guionista",
   "dc.contributor.translator":"Traductor",
+  "dc.creator":"Autor",
+  "dc.description":"Descripción",
+  "dc.identifier.doi":"URL DOI",
+  "dc.identifier.uri":"URI",
+  "dc.language":"Idioma",
+  "dc.rights":"Derechos de acceso",
+  "dc.subject.agrovoc":"Termino AGROVOC",
+  "dc.coverage.countryfocus":"País de Origen",
+  "dc.date.issued":"Fecha de publicación",
+  "dc.publisher":"Editor",
+  "dc.source.art":"Número de artículo",
+  "dc.source.issn":"ISSN",
+  "dc.source.journal":"Revista",
+  "dc.source.volume":"Volumen de la Revista",
+  "dc.type":"Tipo",
+  "dc.coverage.place":"Lugar de Publicación",
+  "dc.subject.keywords":"Palabra clave",
+  "dc.relation.dataset":"Datasets relacionados",
+  "":"",
   "":""
 }
