--- a/src/assets/i18n/es.json5
+++ b/src/assets/i18n/es.json5
@@ -6288,13 +6288,13 @@
   "relationships.isFundingAgencyOf.OrgUnit": "Financiador",
 
   // "repository.image.logo": "Repository logo",
-  "repository.image.logo": "Logotipo del repositorio",
+  "repository.image.logo": "Digital Assets Management Repository logo",
 
   // "repository.title": "DSpace Repository",
-  "repository.title": "Repositorio DSpace",
+  "repository.title": "Digital Assets Management Repository",
 
   // "repository.title.prefix": "DSpace Repository :: ",
-  "repository.title.prefix": "Repositorio DSpace :: ",
+  "repository.title.prefix": "Digital Assets Management Repository :: ",
 
   // "resource-policies.add.button": "Add",
   "resource-policies.add.button": "Agregar",
@@ -10203,4 +10203,56 @@
 
   // "search-facet-option.update.announcement": "The page will be reloaded. Filter {{ filter }} is selected.",
   "search-facet-option.update.announcement": "La página será recargada. Filtro {{ filter }} seleccionado.",
+  "dc.creator.director":"Director",
+  "dc.creator.architect":"Arquitecto",
+  "dc.contributor.designer":"Diseñador",
+  "dc.contributor.editor":"Editor",
+  "dc.contributor.ilustrator":"Ilustrador",
+  "dc.contributor.partnership":"Partnership",
+  "dc.contributor.photographer":"Fotografo",
+  "dc.contributor.translator":"Traductor",
+  "cimmyt.client":"Cliente",
+  "cimmyt.program":"Programa",
+  "cimmyt.ticket.teamwork":"Ticket de teamwork",
+  "cimmyt.architectureoffice":"Empresa",
+  "cimmyt.approverby":"Aprobo",
+  "search.filters.filter.language.head":"Idioma",
+  "search.filters.filter.language.label":"Idioma",
+  "search.filters.filter.language.placeholder":"Idioma",
+  "search.filters.applied.f.language":"Idioma",
+  "search.filters.filter.unit.head":"Unidad",
+  "search.filters.filter.unit.label":"Unidad",
+  "search.filters.filter.unit.placeholder":"Unidad",
+  "search.filters.applied.f.unit":"Unidad",
+  "search.filters.filter.client.head":"Cliente",
+  "search.filters.filter.client.label":"Cliente",
+  "search.filters.filter.client.placeholder":"Cliente",
+  "search.filters.applied.f.client":"Cliente",
+  "search.filters.filter.status.head":"Estado",
+  "search.filters.filter.status.label":"Estado",
+  "search.filters.filter.status.placeholder":"Estado",
+  "search.filters.applied.f.status":"Estado",
+  "search.filters.filter.program.head":"Programa",
+  "search.filters.filter.program.label":"Programa",
+  "search.filters.filter.program.placeholder":"Programa",
+  "search.filters.applied.f.program":"Programa",
+  "":"",
+  "":"",
+  "":"",
+  "":"",
+  "":"",
+  "":"",
+  "":"",
+  "":"",
+  "":"",
+  "":"",
+  "":"",
+  "":"",
+  "":"",
+  "":"",
+  "":"",
+  "":"",
+  "":"",
+  "":"",
+  
 }
