--- a/angular.json
+++ b/angular.json
@@ -44,6 +44,8 @@
             ],
             "styles": [
               "src/styles/startup.scss",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
               {
                 "input": "src/styles/base-theme.scss",
                 "inject": false,
