Add more items fields to Item view

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -6810,10 +6810,10 @@
   "search.filters.filter.language.label":"Language",
   "search.filters.filter.language.placeholder":"Language",
   "search.filters.applied.f.language":"Language",
-  "search.filters.filter.unit.head":"Unit",
-  "search.filters.filter.unit.label":"Unit",
-  "search.filters.filter.unit.placeholder":"Unit",
-  "search.filters.applied.f.unit":"Unit",
+  "search.filters.filter.unit.head":"CIMMYT Area",
+  "search.filters.filter.unit.label":"CIMMYT Area",
+  "search.filters.filter.unit.placeholder":"CIMMYT Area",
+  "search.filters.applied.f.unit":"CIMMYT Area",
   "search.filters.filter.client.head":"Client",
   "search.filters.filter.client.label":"Client",
   "search.filters.filter.client.placeholder":"Client",
@@ -6826,4 +6826,28 @@
   "search.filters.filter.program.label":"Program",
   "search.filters.filter.program.placeholder":"Program",
   "search.filters.applied.f.program":"Program",
+  "cimmyt.unit":"CIMMYT Area",
+  "dc.type.version":"Version",
+  "cimmyt.company":"Company",
+  "cimmyt.status":"Status",
+  "cimmyt.icc":"ICC/Project",
+  "cimmyt.contractnumber":"Contract number",
+  "dc.coverage.country":"Country",
+  "dc.coverage.city":"City",
+  "dc.coverage.placeservice":"Place of service",
+  "dc.coverage.region":"Region",
+  "dc.language":"Language",
+  "dc.contributor.signer":"Signer",
+  "dc.identifier.isbn":"ISBN",
+  "dc.identifier.issn":"ISSN",
+  "dc.identifier.uri": "URI",
+  "dc.subject.agrovoc":"Agrovoc",
+  "dc.subject.keywords":"Keywords",
+  "dc.subject.program":"Program",
+  "dc.subject.project":"Proyect",
+  "dc.subject.cimmyt":"Keywords",
+  "dc.coverage.countryfocus":"Country focus",
+  "cimmyt.sender":"Sender",
+  "cimmyt.affiliation":"Affiliation",
+
 }
