--- a/src/assets/i18n/es.json5
+++ b/src/assets/i18n/es.json5
@@ -10220,10 +10220,10 @@
   "search.filters.filter.language.label":"Idioma",
   "search.filters.filter.language.placeholder":"Idioma",
   "search.filters.applied.f.language":"Idioma",
-  "search.filters.filter.unit.head":"Unidad",
-  "search.filters.filter.unit.label":"Unidad",
-  "search.filters.filter.unit.placeholder":"Unidad",
-  "search.filters.applied.f.unit":"Unidad",
+  "search.filters.filter.unit.head":"Unidad de CIMMYT",
+  "search.filters.filter.unit.label":"Unidad de CIMMYT",
+  "search.filters.filter.unit.placeholder":"Unidad de CIMMYT",
+  "search.filters.applied.f.unit":"Unidad de CIMMYT",
   "search.filters.filter.client.head":"Cliente",
   "search.filters.filter.client.label":"Cliente",
   "search.filters.filter.client.placeholder":"Cliente",
@@ -10236,23 +10236,31 @@
   "search.filters.filter.program.label":"Programa",
   "search.filters.filter.program.placeholder":"Programa",
   "search.filters.applied.f.program":"Programa",
+  "cimmyt.unit":"Unidad de CIMMYT",
+  "dc.type.version":"Versión",
+  "cimmyt.company":"Compañia",
+  "cimmyt.status":"Estado",
+  "cimmyt.icc":"ICC/Proyecto",
+  "cimmyt.contractnumber":"Número de contrato",
+  "dc.coverage.country":"País",
+  "dc.coverage.city":"Ciudad",
+  "dc.coverage.placeservice":"Lugar de servicio",
+  "dc.coverage.region":"Región",
+  "dc.language":"Idioma",
+  "dc.contributor.signer":"Signer",
+  "dc.identifier.isbn":"ISBN",
+  "dc.identifier.issn":"ISSN",
+  "dc.identifier.uri": "URI",
+  "dc.subject.agrovoc":"Agrovoc",
+  "dc.subject.keywords":"Palabras Clave",
+  "dc.subject.program":"Programa",
+  "dc.subject.project":"Proyecto",
+  "dc.subject.cimmyt":"Keywords",
+  "dc.coverage.countryfocus":"País de enfoque",
+  "cimmyt.sender":"Remitente",
+  "cimmyt.affiliation":"Afiliación",
   "":"",
   "":"",
   "":"",
   "":"",
-  "":"",
-  "":"",
-  "":"",
-  "":"",
-  "":"",
-  "":"",
-  "":"",
-  "":"",
-  "":"",
-  "":"",
-  "":"",
-  "":"",
-  "":"",
-  "":"",
-  
 }
