--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -5240,6 +5240,7 @@
   "dc.contributor.illustrator":"Illustrator",
   "dc.contributor.other":"Contributor",
   "search.filters.filter.authorcorporate.head":"Corporate author",
+  "search.filters.applied.f.authorcorporate":"Corporate author",
   "sorting.dc.date.available.DESC":"Available date",
   "search.filters.filter.authorcorporate.label":"Search corporate author",
   "search.filters.filter.authorcorporate.placeholder":"Name corporate author",
@@ -5317,10 +5318,99 @@
   "search.filters.filter.ProgramAccelerator.head":"Program or Accelerator",
   "search.filters.filter.ProgramAccelerator.label":"Program or Accelerator",
   "search.filters.filter.ProgramAccelerator.placeholder":"Program or Accelerator",
+  "search.filters.applied.f.ProgramAccelerator":"Program or Accelerator",
   "person.affiliation.name":"Affiliation ",
   "person.identifier":"Identifier",
-  "person.description.note":"Note",
-  "":"",
-  "":"",
-  "":""
+  "person.description.note":"Note","dc.audience":"Audience",
+"dc.author":"-",
+"dc.book.author":"-",
+"dc.callnumber":"-",
+"dc.cgiar":"-",
+"dc.conference.date-end":"Conference date end",
+"dc.conference.date-start":"Conference date start",
+"dc.conference.name":"Conference name",
+"dc.conference.place":"Conference place",
+"dc.contributor":"Contributor",
+"dc.contributor.advisor":"Advisor",
+"dc.contributor.corporateauthor":"Corporate author",
+"dc.contributor.designer":"Designer",
+"dc.contributor.narrator":"Narrator",
+"dc.country.production":"-",
+"dc.coverage":"Coverage",
+"dc.coverage.hubs":"Hubs",
+"dc.coverage.other":"Place of Study",
+"dc.coverage.regionoffocus":"Region of Focus",
+"dc.coverage.spatial":"Coverage (time period)",
+"dc.coverage.temporal":"Temporal Coverage",
+"dc.creator.aux":"-",
+"dc.creator.photographer":"Photographer",
+"dc.date":"Date",
+"dc.date.accessioned":"-",
+"dc.date.available":"-",
+"dc.date.created":"-",
+"dc.description.abstract":"Abstract",
+"dc.description.duration":"Duration",
+"dc.description.notes":"Notes",
+"dc.description.participants":"Participants",
+"dc.description.personages":"Personages",
+"dc.description.physical":"Physical Description",
+"dc.description.provenance":"-",
+"dc.description.size":"Format size",
+"dc.description.sponsor":"Sponsor",
+"dc.description.sponsorship":"Sponsorship",
+"dc.format":"Format",
+"dc.format.extent":"Format extent",
+"dc.format.medium":"Format medium",
+"dc.format.resolution":"Resolution",
+"dc.formatextent.duration":"Duration",
+"dc.formatextent.size":"Size",
+"dc.identifier":"Identifier",
+"dc.identifier.citation":"-",
+"dc.identifier.issn":"ISSN",
+"dc.identifier.other":"Other Identifier",
+"dc.language.subtitles":"Subtitles",
+"dc.libcat.url":"Libcat",
+"dc.oa.status":"-",
+"dc.program":"Program",
+"dc.project":"Project",
+"dc.publisher.other":"Publisher",
+"dc.publisher.uri":"-",
+"dc.record.notes":"-",
+"dc.record.notescontent":"-",
+"dc.region.focus":"Region of Focus",
+"dc.relation":"Relation",
+"dc.relation.CRP":"-",
+"dc.relation.ispartof":"",
+"dc.relation.ispartofseries":"Series",
+"dc.relation.ispartofsubseries":"Sub-series",
+"dc.relation.ispartofsub-series":"Sub-series",
+"dc.relation.series":"Series",
+"dc.relation.set":"Relation",
+"dc.relation.software":"Relation",
+"dc.relation.subseries":"Sub-series",
+"dc.relation.uri":"Relation",
+"dc.rights.accessRights":"License",
+"dc.rights.license":"Access Rights",
+"dc.rights.uri":"Access Rights",
+"dc.series.description":"Series",
+"dc.series.number":"Series",
+"dc.source":"Source",
+"dc.source.isbn":"ISBN",
+"dc.source.uri":"Source",
+"dc.subject":"-",
+"dc.subject.cgiar":"CGIAR Research Program",
+"dc.subject.descriptorsagrovoc":"-",
+"dc.subject.focus":"-",
+"dc.subject.other":"Other",
+"dc.subject.program":"Program",
+"dc.subject.project":"Project",
+"dc.subject.tags":"Tag",
+"dc.suppress":"-",
+"dc.title":"Title",
+"dc.type.accessRights":"Access Rights",
+"dc.type.other":"Access Rights",
+"dc.type.publicationversion":"Publication Version",
+  "dc.source.elocator":"Elocator",
+  "dc.source.issue":"Issue number",
+  "dc.identifier.isbn":"ISBN",
 }
