--- a/src/assets/i18n/es.json5
+++ b/src/assets/i18n/es.json5
@@ -7846,6 +7846,7 @@
   "dc.contributor.illustrator":"Ilustrador",
   "dc.contributor.other":"Contribuidor",
   "search.filters.filter.authorcorporate.head":"Autor corporativo",
+  "search.filters.applied.f.authorcorporate":"Autor corporativo",
   "sorting.dc.date.available.DESC":"Fecha de deposito",
   "search.filters.filter.authorcorporate.label":"Buscar por autor corporativo",
   "search.filters.filter.authorcorporate.placeholder":"Nombre autor corporativo",
@@ -7927,9 +7928,98 @@
   "search.filters.filter.ProgramAccelerator.label":"Programa o Acelerador",
   "search.filters.applied.f.ProgramAccelerator":"Programa o Acelerador",
   "search.filters.filter.ProgramAccelerator.placeholder":"Programa o Acelerador",
+  "search.filters.applied.f.ProgramAccelerator":"Programa o Acelerador",
   "person.affiliation.name":"Afiliación",
-  "person.description.note":"Notas",
-  "":"",
-  "":"",
-  "":""
+  "person.description.note":"Notas","dc.audience":"Audiencia",
+"dc.author":"-",
+"dc.book.author":"-",
+"dc.callnumber":"-",
+"dc.cgiar":"-",
+"dc.conference.date-end":"Fin de la conferencia",
+"dc.conference.date-start":"Inicio de la conferencia",
+"dc.conference.name":"Nombre de la conferencia",
+"dc.conference.place":"Lugar de la conferencia",
+"dc.contributor":"Colaborador",
+"dc.contributor.advisor":"Asesor",
+"dc.contributor.corporateauthor":"Autor corporativo",
+"dc.contributor.designer":"Diseñador",
+"dc.contributor.narrator":"Narrador",
+"dc.country.production":"-",
+"dc.coverage":"Cobertura",
+"dc.coverage.hubs":"Centros",
+"dc.coverage.other":"Lugar de estudio",
+"dc.coverage.regionoffocus":"Región de enfoque",
+"dc.coverage.spatial":"Cobertura (período de tiempo)",
+"dc.coverage.temporal":"Cobertura temporal",
+"dc.creator.aux":"-",
+"dc.creator.photographer":"Fotógrafo",
+"dc.date":"Fecha",
+"dc.date.accessioned":"-",
+"dc.date.available":"-",
+"dc.date.created":"-",
+"dc.description.abstract":"Resumen",
+"dc.description.duration":"Duración",
+"dc.description.notes":"Notas",
+"dc.description.participants":"Participantes",
+"dc.description.personages":"Personajes",
+"dc.description.physical":"Descripción física",
+"dc.description.provenance":"-",
+"dc.description.size":"Tamaño",
+"dc.description.sponsor":"Patrocinador",
+"dc.description.sponsorship":"Patrocinio",
+"dc.format":"Formato",
+"dc.format.extent":"Extensión de formato",
+"dc.format.medium":"Formato",
+"dc.format.resolution":"Resolución",
+"dc.formatextent.duration":"Duración",
+"dc.formatextent.size":"Tamaño",
+"dc.identifier":"Identificador",
+"dc.identifier.citation":"-",
+"dc.identifier.issn":"ISSN",
+"dc.identifier.other":"Otro identificador",
+"dc.language.subtitles":"Subtítulos",
+"dc.libcat.url":"Libcat",
+"dc.oa.status":"-",
+"dc.program":"Programa",
+"dc.project":"Proyecto",
+"dc.publisher.other":"Editor",
+"dc.publisher.uri":"-",
+"dc.record.notes":"-",
+"dc.record.notescontent":"-",
+"dc.region.focus":"Región de enfoque",
+"dc.relation":"Relación",
+"dc.relation.CRP":"-",
+"dc.relation.ispartof":"",
+"dc.relation.ispartofseries":"Serie",
+"dc.relation.ispartofsubseries":"Subseries",
+"dc.relation.ispartofsub-series":"Subseries",
+"dc.relation.series":"Serie",
+"dc.relation.set":"Relación",
+"dc.relation.software":"Relación",
+"dc.relation.subseries":"Subseries",
+"dc.relation.uri":"Relación",
+"dc.rights.accessRights":"Licencia",
+"dc.rights.license":"Derechos de acceso",
+"dc.rights.uri":"Derechos de acceso",
+"dc.series.description":"Serie",
+"dc.series.number":"Serie",
+"dc.source":"Fuente",
+"dc.source.isbn":"ISBN",
+"dc.source.uri":"Fuente",
+"dc.subject":"-",
+"dc.subject.cgiar":"Programa de Investigación del CGIAR",
+"dc.subject.descriptorsagrovoc":"-",
+"dc.subject.focus":"-",
+"dc.subject.other":"Otro",
+"dc.subject.program":"Programa",
+"dc.subject.project":"Proyecto",
+"dc.subject.tags":"Etiqueta",
+"dc.suppress":"-",
+"dc.title":"Título",
+"dc.type.accessRights":"Derechos de acceso",
+"dc.type.other":"Derechos de acceso",
+"dc.type.publicationversion":"Versión de publicación",
+  "dc.source.elocator":"Elocator",
+  "dc.source.issue":"Número de revista",
+  "dc.identifier.isbn":"ISBN"
 }
