Add amount div to simple item page

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -6930,5 +6930,6 @@
   "dc.coverage.countryfocus":"Country focus",
   "cimmyt.sender":"Sender",
   "cimmyt.affiliation":"Affiliation",
+  "item.page.amount.header":"Amount"
 
 }
