--- a/src/assets/i18n/es.json5
+++ b/src/assets/i18n/es.json5
@@ -10462,6 +10462,7 @@
   "dc.coverage.countryfocus":"País de enfoque",
   "cimmyt.sender":"Remitente",
   "cimmyt.affiliation":"Afiliación",
+  "item.page.amount.header":"Monto",
   "":"",
   "":"",
   "":"",
